# tenshin-model-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Tenshin Activity Diagram.drawio  Untitled Diagram.drawio
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/shaders/: base.fs  base.vs  unlit-color.fs  unlit-color.vs
src/: app.cpp  app.hpp  log.hpp  main.cpp  model.hpp  program.cpp  resource_manager.cpp  resource_manager.hpp  shader.cpp  shader.hpp  utils.hpp  window.cpp  window.hpp
src/components/: camera.cpp  camera.hpp  camera_component.cpp  camera_component.hpp  icomponent.hpp  idrawable.hpp  primitive_renderer.cpp  primitive_renderer.hpp  transform.hpp  transform_component.hpp
src/core/: app.cpp  app.hpp  event.cpp  event.hpp  input.cpp  input.hpp  log.hpp  resource_manager.cpp  resource_manager.hpp  scene.cpp  scene.hpp  scene_object.hpp  singleton.hpp  types.hpp  ui_manager.cpp  ui_manager.hpp  window.cpp  window.hpp
src/rendering/: camera.cpp  camera.hpp  cube.cpp  cube.hpp  model.hpp  primitive_renderer.cpp  primitive_renderer.hpp  quad.cpp  quad.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/rendering/primitives/: cube.cpp  cube.hpp  primitive.hpp  quad.cpp  quad.hpp
